{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 147,
  "lineage": "b6d7a939-37d9-d08c-2959-38faa3db09d1",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-010809fc6ea5036ac",
            "public_dns": "ec2-3-81-239-3.compute-1.amazonaws.com",
            "public_ip": "3.81.239.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.my_ec2.aws_internet_gateway.MyIGW",
            "module.my_ec2.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:946481859757:instance/i-0c741083876f4e1dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c741083876f4e1dc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06614ce8547ad8516",
            "private_dns": "ip-172-31-29-2.ec2.internal",
            "private_ip": "172.31.29.2",
            "public_dns": "ec2-54-144-202-241.compute-1.amazonaws.com",
            "public_ip": "54.144.202.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0371d253a095e6d06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4090d20d",
            "tags": {
              "Name": "my_prod_EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-6135fd52"
            ]
          }
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d24824c2e6445581",
            "owner_id": "946481859757",
            "tags": {
              "Creation-Time": "",
              "environment": "Dev",
              "region": "us-east-1",
              "resource-name": "My Custom IGW"
            },
            "vpc_id": "vpc-0e14fef9efbd5f16e"
          },
          "dependencies": [
            "module.my_ec2.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.my_ec2.provider.aws",
      "instances": []
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d24824c2e6445581",
            "id": "r-rtb-0b11812470172cbaa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b11812470172cbaa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.my_ec2.aws_internet_gateway.MyIGW",
            "module.my_ec2.aws_route_table.public",
            "module.my_ec2.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-066e911922e9fd0ab",
            "owner_id": "946481859757",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0e14fef9efbd5f16e"
          },
          "dependencies": [
            "module.my_ec2.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b11812470172cbaa",
            "owner_id": "946481859757",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "Dev-public-route-table"
            },
            "vpc_id": "vpc-0e14fef9efbd5f16e"
          },
          "dependencies": [
            "module.my_ec2.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.my_ec2.provider.aws"
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.my_ec2.provider.aws"
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946481859757:security-group/sg-07a987f813bd18ca0",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a987f813bd18ca0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dev-default-sg",
            "name_prefix": null,
            "owner_id": "946481859757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creation-Time": "",
              "environment": "Dev",
              "region": "us-east-1",
              "resource-name": "My Custom SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e14fef9efbd5f16e"
          },
          "dependencies": [
            "module.my_ec2.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "module.my_ec2.provider.aws"
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "module.my_ec2.provider.aws"
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946481859757:vpc/vpc-0e14fef9efbd5f16e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-06a37e69650c9926a",
            "default_route_table_id": "rtb-0d077d5a018bb996f",
            "default_security_group_id": "sg-07a52acc516f698e0",
            "dhcp_options_id": "dopt-b7ee86cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e14fef9efbd5f16e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d077d5a018bb996f",
            "owner_id": "946481859757",
            "tags": {
              "Creation-Time": "",
              "environment": "Dev",
              "region": "us-east-1",
              "resource-name": "My Custom VPC"
            }
          }
        }
      ]
    }
  ]
}